Check that resource is not a folder.